[gd_scene load_steps=12 format=3 uid="uid://b8nfep5sonddn"]

[ext_resource type="Script" path="res://risometro/Risometro.gd" id="1_oafw3"]
[ext_resource type="Texture2D" uid="uid://b0hqcq7mmqjuu" path="res://risometro/img/indiferencia.png" id="2_2l1c2"]
[ext_resource type="Texture2D" uid="uid://ber8ggh26u6tk" path="res://risometro/img/caca-puntaje-maschica.png" id="2_axeu8"]
[ext_resource type="Texture2D" uid="uid://h0sqibkeesfk" path="res://risometro/img/risasb.png" id="2_um0qj"]
[ext_resource type="Texture2D" uid="uid://ddfyf23to28x8" path="res://risometro/img/indiferenciab.png" id="3_qam32"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m1f5n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0q7qe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nukk7"]

[sub_resource type="SystemFont" id="SystemFont_ggm1j"]

[sub_resource type="LabelSettings" id="LabelSettings_yghpf"]
font = SubResource("SystemFont_ggm1j")
font_color = Color(0.913725, 0.0862745, 0.0941176, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qpvp"]

[node name="Risometro" type="Control" node_paths=PackedStringArray("progress_bar", "loop_timer", "laugh_timer", "label", "pidgeons")]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -276.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_oafw3")
loop_delta_time = 1.5
loop_delta_points = 3.9
max_points = 143.2
current_points = 58.5
points_per_hit = 5.8
laugh_time = 1.5
progress_bar = NodePath("HBoxContainer/VBoxContainer/ProgressBar")
loop_timer = NodePath("LoopTimer")
laugh_timer = NodePath("LaughTimer")
label = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/PanelContainer/VBoxContainer/Label")
pidgeons = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/Pidgeons")
img_risa = ExtResource("2_um0qj")
img_indif = ExtResource("3_qam32")

[node name="LoopTimer" type="Timer" parent="."]

[node name="LaughTimer" type="Timer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -276.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_m1f5n")

[node name="PanelContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0q7qe")

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nukk7")

[node name="Points" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_axeu8")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/PanelContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0q7qe")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "         45"
label_settings = SubResource("LabelSettings_yghpf")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Pidgeons" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_2l1c2")
stretch_mode = 2

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_m1f5n")

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 8
show_percentage = false

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0q7qe")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6qpvp")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_bottom = 31.0
grow_horizontal = 0
scale = Vector2(1.08977, 1)
text = "asdasd"

[connection signal="timeout" from="LoopTimer" to="." method="_on_loop_timer_timeout"]
[connection signal="timeout" from="LaughTimer" to="." method="_on_laugh_timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
